--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body{
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 20px 3px rgb(1, 1, 1);
+    background-image: linear-gradient( 180.6deg,  rgb(5, 139, 121) 11.2%, #b90285 55%, rgb(52, 113, 235) 100.2% );
+    background-color: #000000;
     padding: 20px;
     border-radius: 30px;
     width: 55%;
@@ -25,10 +27,10 @@ body{
     letter-spacing: 5px;
     padding: 20px;
     margin-bottom: 20px;
-    color: #470147;
+    color: #751975;
     font-size: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-shadow: #000000 2px 0 9px  ;
+    text-shadow: #5b0101 2px 0 9px  ;
 }
 .watch-output{
     min-width: 80px;
@@ -51,8 +53,14 @@ body{
     content: ':';
     margin: 5px;
 }
-
+.btnContent{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 button {
+    text-align: center;
     margin: 20px;
     padding: 1.3em 3em;
     font-size: 12px;
@@ -80,4 +88,10 @@ button {
   
   button:active {
     transform: translateY(-1px);
+  }
+
+  @media screen and (max-width :600px){
+    .container{
+        width: 90%;
+    }
   }
