--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: linear-gradient( 109.6deg,  rgb(5, 139, 121) 11.2%, rgb(52, 113, 235) 100.2% );
+    background-image: linear-gradient( 360deg,  rgb(5, 139, 121) 45.2%, rgb(52, 113, 235) 100.2% );
 }
 .container{
     display: flex;
@@ -16,9 +16,9 @@ body{
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 20px 3px rgb(1, 1, 1);
-    background-image: linear-gradient( 180.6deg,  rgb(5, 139, 121) 11.2%, #b90285 55%, rgb(52, 113, 235) 100.2% );
+    background-image: linear-gradient( 180.6deg,  rgb(5, 139, 121) 11.2%, #363535 55%, rgb(52, 113, 235) 100.2% );
     background-color: #000000;
-    padding: 20px;
+    padding-bottom: 20px;
     border-radius: 30px;
     width: 55%;
 }
@@ -39,7 +39,7 @@ body{
     align-items: center;
     margin: 20px;
     padding: 10px 20px;
-    box-shadow: 2px 5px 20px 10px rgba(0, 45, 100, 0.4);
+    box-shadow: 2px 5px 20px 3px rgba(0, 15, 33, 0.4);
     font-size: 50px;
     color: #e8e7ed;
 }
